fixed twitter profile description pre-wrap

--- a/src/gutenberg/blocks/twitter/style.scss
+++ b/src/gutenberg/blocks/twitter/style.scss
@@ -95,6 +95,11 @@
     div + .ghostkit-twitter-profile-location {
         margin-top: 1.2em;
     }
+
+    // Display line breaks in profile description
+    .ghostkit-twitter-profile-description {
+        white-space: pre-wrap;
+    }
 }
 
 // items.
